replace love with home

--- a/client/client.jade
+++ b/client/client.jade
@@ -33,7 +33,8 @@ head
 
 
 template(name='front')
-    +love
+    +home
+    // +love
     .ui.basic.center.aligned.segment
         a(href="/tarot")
             i.grey.big.moon.icon
@@ -57,5 +58,5 @@ template(name='layout')
 template(name='not_found')
     .ui.basic.center.aligned.segment
         .ui.header page not found
-        a(href="/love")
+        a(href="/")
             i.massive.yin.yang.link.icon
