--- a/client/s.css
+++ b/client/s.css
@@ -12,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background: rgba(200,200,200,1) !important;
-  filter: invert(.99) !important; 
+  /*filter: invert(.99) !important; */
   /*overscroll-behavior: none; */
   /*transition: all .15s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -82,7 +82,7 @@ html {
 }
 .invert {
   /*  color:white !important;*/
-  filter: invert(1) !important; 
+  /*filter: invert(1) !important; */
   
 } 
 
@@ -486,7 +486,7 @@ a.title, #title {
 }
 
 img, .rounded, .embed, iframe, .text {
-  filter: invert(1) !important; 
+  /*filter: invert(1) !important; */
 }
 .left.floated{
     margin:3px !important;
