--- a/client/s.css
+++ b/client/s.css
@@ -95,7 +95,7 @@ html {
     display:none !important;
 }
 p {
-  font-family: 'Ubuntu', sans-serif !important;
+  /*font-family: 'Ubuntu', sans-serif !important;*/
 
 }
 
