init group facet, little better control with custom home templates

--- a/client/client.jade
+++ b/client/client.jade
@@ -35,19 +35,19 @@ head
 template(name='front')
     +home
     // +love
-    .ui.basic.center.aligned.segment
-        a(href="/tarot")
-            i.grey.big.moon.icon
-        a(href="/recipes")
-            i.grey.big.food.icon
-        a(href="/love")
-            i.grey.big.heart.icon
-        a(href="/dao")
-            i.grey.big.yin.yang.icon
-        a(href="/discrete")
-            i.grey.big.calculator.icon
-        a(href="/avery")
-            i.grey.big.beer.icon
+    // .ui.basic.center.aligned.segment
+    //     a(href="/tarot")
+    //         i.grey.big.moon.icon
+    //     a(href="/recipes")
+    //         i.grey.big.food.icon
+    //     a(href="/love")
+    //         i.grey.big.heart.icon
+    //     a(href="/dao")
+    //         i.grey.big.yin.yang.icon
+    //     a(href="/discrete")
+    //         i.grey.big.calculator.icon
+    //     a(href="/avery")
+    //         i.grey.big.beer.icon
 
 template(name='layout')
     .ui.bottom.attached.pushable.segment
